_sass/navigation.scss
.nav {
  color: #B86A5D;
  border-bottom: 1px solid $light-grey;
  font-size: .95rem;
}
.nav-name {
  width: 100%;
  text-align: center;
  font-weight: bold;
  display: inline-block;
  color: $main-color;
  border-top: 5px solid $main-color;
}
@media(min-width: 768px) {
  .nav-name {
    width: initial;
    text-align: left;
    font-weight: normal;
    border-top: 0;
    border-left: 10px solid $main-color;
  }
}
.nav a {
  display: inline-block;
  padding: 15px;
  border-bottom: none;
}
.nav-menu {
  display: inline-block;
}
.nav-right {
  float: right;
}
.menu-toggle {
  cursor: pointer;
}
.menu-toggle:hover {
  color: #7E7E7E;
}
.nav-menu ul {
	list-style: none;
	padding-left: 0;
  margin-bottom: 0;
  margin-top: 0;
}
.nav-menu ul li {
  display: inline-block;
  margin-left: 10px;
  margin-bottom: -1px;
  opacity: .45;
}
.nav-menu .active {
  opacity: 1;
}
.nav-menu .active a {
  border-bottom: 0;
}
@media (min-width: 768px) {
  .nav-menu ul li {
    opacity: 1;
  }
  .nav-menu .active a {
    border-bottom: 1px solid $main-color;
  }
}

